# ivysis

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
common/: logger.py  utils.py
data_loader/: base_email_fetcher.py  gmail_fetcher.py
digest/: information_extractor.py
llm/: base_llm_client.py  ollama_client.py
llm/clients/: base_llm_client.py  groq_client.py  ollama_client.py
llm/schemas/: base.py
llm/templates/: biography_formation.py  default.py  email_classifier.py  email_implication.py  email_uniqueness.py  persona_extraction.py
llm/templates/information_extraction/: email_extraction.py
llm/templates/message_digest/: email_summarizing.py  information_extraction.py
llm/templates/onboarding/: biography_formation.py  biography_writing.py  email_implication_v1.py  email_uniqueness.py  email_uniqueness_batch.py  persona_extraction.py  persona_extraction_batch.py
memoboard/: memoboard_builder.py
mindmap/: mindmap_builder.py
persona/: pesrona_builder.py
