[tool.poetry]
name = "ivysis"
version = "0.1.0"
description = ""
authors = ["lokwkin <lokwkin@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.6"
colorama = "^0.4.6"
pystache = "^0.6.7"
python-dateutil = "^2.9.0.post0"
docling = "^2.15.1"
groq = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
